--- a/login.html
+++ b/login.html
@@ -5,85 +5,79 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - Meti Alpha</title>
   <style>
-    :root {
-      --primary-color: #2e7d32;
-      --secondary-color: #66bb6a;
-      --highlight-color: #ffc107;
-      --text-color: #fff;
-      --background-color: #f0fdf4;
-      --footer-color: #222;
-    }
-
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom right, var(--primary-color), var(--secondary-color));
-      color: #333;
-      height: 100vh;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #181818;
+      color: #fff;
       display: flex;
       justify-content: center;
       align-items: center;
+      height: 100vh;
+      background: linear-gradient(45deg, #0f0f0f, #1c1c1c);
     }
 
     .login-container {
-      width: 90%;
-      max-width: 400px;
-      padding: 20px;
-      background-color: white;
-      border-radius: 10px;
-      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+      background-color: #232323;
+      border-radius: 8px;
+      padding: 40px;
+      width: 350px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
       text-align: center;
     }
 
     h1 {
-      color: var(--primary-color);
+      font-size: 2em;
+      color: #4CAF50; /* Binance-like green */
     }
 
     input {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin: 10px 0;
-      border-radius: 5px;
-      border: 1px solid #ddd;
+      border: 1px solid #333;
+      border-radius: 4px;
+      background-color: #2c2c2c;
+      color: #fff;
+      font-size: 1em;
     }
 
     button {
+      background-color: #4CAF50; /* Binance-like green */
+      color: white;
+      padding: 15px 0;
       width: 100%;
-      padding: 12px;
-      background-color: var(--primary-color);
-      color: #fff;
       border: none;
-      border-radius: 5px;
-      cursor: pointer;
+      border-radius: 4px;
       font-size: 1.1em;
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
     }
 
     button:hover {
-      background-color: var(--highlight-color);
+      background-color: #45a049;
     }
 
-    .footer {
+    footer {
       position: fixed;
       bottom: 10px;
       left: 50%;
       transform: translateX(-50%);
-      font-size: 0.9em;
-      color: #fff;
+      font-size: 0.8em;
+      color: #888;
     }
   </style>
 </head>
 <body>
 
   <div class="login-container">
-    <h1>Login</h1>
+    <h1>Login to Meti Alpha</h1>
     <input type="text" placeholder="Username" required>
     <input type="password" placeholder="Password" required>
     <button onclick="window.location.href='index.html'">Login</button>
   </div>
 
-  <div class="footer">
-    <p>&copy; 2025 Meti Alpha</p>
-  </div>
+  <footer>&copy; 2025 Meti Alpha</footer>
 
 </body>
 </html>
