--- a/investment.html
+++ b/investment.html
@@ -5,83 +5,81 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Investment Packages - Meti Alpha</title>
   <style>
-    :root {
-      --primary-color: #2e7d32;
-      --secondary-color: #66bb6a;
-      --highlight-color: #ffc107;
-      --text-color: #fff;
-      --background-color: #f0fdf4;
-      --footer-color: #222;
-    }
-
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom right, var(--primary-color), var(--secondary-color));
-      color: #333;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #2b2b2b;
+      color: #fff;
     }
 
     nav {
-      background-color: var(--footer-color);
-      display: flex;
-      justify-content: space-around;
+      background-color: #181818;
       padding: 15px 0;
+      text-align: center;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
     }
 
     nav a {
-      color: var(--text-color);
-      text-decoration: none;
+      color: #fff;
       font-size: 1.1em;
+      text-decoration: none;
+      margin: 0 20px;
+      padding: 10px;
     }
 
     nav a:hover {
-      color: var(--highlight-color);
+      color: #4CAF50;
     }
 
-    .investment-options {
+    .investment-container {
       display: flex;
       justify-content: space-around;
       padding: 50px 20px;
-    }
-
-    .investment-package {
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
       text-align: center;
-      width: 25%;
     }
 
-    .investment-package h2 {
-      font-size: 2em;
-      color: var(--primary-color);
+    .package {
+      background-color: #333;
+      border-radius: 8px;
+      padding: 30px;
+      width: 30%;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+      transition: transform 0.3s ease-in-out;
     }
 
-    .investment-package p {
+    .package:hover {
+      transform: scale(1.05);
+    }
+
+    .package h2 {
+      font-size: 2.5em;
+      color: #4CAF50;
+    }
+
+    .package p {
       font-size: 1.2em;
-      color: #555;
+      color: #ccc;
+      margin-bottom: 20px;
     }
 
     .cta-button {
-      background-color: var(--primary-color);
+      background-color: #4CAF50;
       color: white;
       padding: 12px 24px;
-      border-radius: 5px;
+      border-radius: 30px;
+      font-size: 1.1em;
       text-decoration: none;
-      font-weight: bold;
-      transition: background-color 0.3s;
-      margin-top: 20px;
+      transition: all 0.3s ease-in-out;
     }
 
     .cta-button:hover {
-      background-color: #c8e6c9;
+      background-color: #45a049;
     }
 
     footer {
       text-align: center;
       padding: 20px;
-      background-color: var(--footer-color);
+      background-color: #181818;
       color: white;
     }
   </style>
@@ -94,20 +92,20 @@
     <a href="about.html">About</a>
   </nav>
 
-  <section class="investment-options">
-    <div class="investment-package">
+  <section class="investment-container">
+    <div class="package">
       <h2>Silver Package</h2>
       <p>$100 - 40% Weekly Return</p>
       <p>Expected After 2 Weeks: $140</p>
       <a href="deposit-withdrawal.html" class="cta-button">Choose Package</a>
     </div>
-    <div class="investment-package">
+    <div class="package">
       <h2>Gold Package</h2>
       <p>$500 - 40% Weekly Return</p>
       <p>Expected After 2 Weeks: $700</p>
       <a href="deposit-withdrawal.html" class="cta-button">Choose Package</a>
     </div>
-    <div class="investment-package">
+    <div class="package">
       <h2>Platinum Package</h2>
       <p>$1000 - 50% Weekly Return</p>
       <p>Expected After 2 Weeks: $1500</p>
