--- a/deposit-withdrawal.html
+++ b/deposit-withdrawal.html
@@ -3,79 +3,105 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Deposit/Withdrawal - Meti Alpha</title>
+  <title>Deposit & Withdrawal - Meti Alpha</title>
   <style>
-    :root {
-      --primary-color: #2e7d32;
-      --secondary-color: #66bb6a;
-      --highlight-color: #ffc107;
-      --text-color: #fff;
-      --background-color: #f0fdf4;
-      --footer-color: #222;
-    }
-
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom right, var(--primary-color), var(--secondary-color));
-      color: #333;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #2b2b2b;
+      color: #fff;
     }
 
     nav {
-      background-color: var(--footer-color);
-      display: flex;
-      justify-content: space-around;
+      background-color: #181818;
       padding: 15px 0;
+      text-align: center;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
     }
 
     nav a {
-      color: var(--text-color);
-      text-decoration: none;
+      color: #fff;
       font-size: 1.1em;
+      text-decoration: none;
+      margin: 0 20px;
+      padding: 10px;
     }
 
     nav a:hover {
-      color: var(--highlight-color);
+      color: #4CAF50;
     }
 
-    .transaction-form {
-      max-width: 600px;
-      margin: 50px auto;
-      padding: 30px;
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+    .deposit-withdrawal-container {
+      display: flex;
+      justify-content: space-around;
+      padding: 50px 20px;
       text-align: center;
     }
 
-    .transaction-form input {
+    .deposit-box {
+      background-color: #333;
+      border-radius: 8px;
+      padding: 40px;
+      width: 45%;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+      transition: transform 0.3s ease-in-out;
+    }
+
+    .deposit-box:hover {
+      transform: scale(1.05);
+    }
+
+    .deposit-box h2 {
+      font-size: 2.5em;
+      color: #4CAF50;
+    }
+
+    .deposit-box p {
+      font-size: 1.2em;
+      color: #ccc;
+      margin-bottom: 20px;
+    }
+
+    .input-field {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin: 10px 0;
-      border-radius: 5px;
-      border: 1px solid #ddd;
+      border: 1px solid #333;
+      border-radius: 4px;
+      background-color: #2c2c2c;
+      color: #fff;
+      font-size: 1.1em;
     }
 
     .cta-button {
-      background-color: var(--primary-color);
+      background-color: #4CAF50;
       color: white;
       padding: 12px 24px;
-      border-radius: 5px;
+      border-radius: 30px;
+      font-size: 1.1em;
       text-decoration: none;
-      font-weight: bold;
-      transition: background-color 0.3s;
-      margin-top: 20px;
+      transition: all 0.3s ease-in-out;
     }
 
     .cta-button:hover {
-      background-color: #c8e6c9;
+      background-color: #45a049;
     }
 
     footer {
       text-align: center;
       padding: 20px;
-      background-color: var(--footer-color);
+      background-color: #181818;
       color: white;
+    }
+
+    .balance-summary {
+      margin-top: 30px;
+      font-size: 1.3em;
+      color: #ccc;
+    }
+
+    .balance-summary p {
+      margin: 5px 0;
     }
   </style>
 </head>
@@ -85,17 +111,45 @@
     <a href="index.html">Home</a>
     <a href="investment.html">Investment</a>
     <a href="about.html">About</a>
+    <a href="deposit-withdrawal.html">Deposit & Withdrawal</a>
   </nav>
 
-  <section class="transaction-form">
-    <h2>Deposit or Withdraw</h2>
-    <input type="number" placeholder="Amount" required>
-    <select required>
-      <option value="deposit">Deposit</option>
-      <option value="withdrawal">Withdrawal</option>
-    </select>
-    <button class="cta-button" onclick="alert('Transaction submitted')">Submit Transaction</button>
+  <section class="deposit-withdrawal-container">
+    <div class="deposit-box">
+      <h2>Deposit Funds</h2>
+      <p>Choose a deposit method to fund your account.</p>
+      <form action="#">
+        <input type="number" class="input-field" placeholder="Enter amount (USD)" required>
+        <select class="input-field">
+          <option value="bank">Bank Transfer</option>
+          <option value="crypto">Cryptocurrency</option>
+          <option value="paypal">PayPal</option>
+        </select>
+        <a href="#" class="cta-button">Deposit</a>
+      </form>
+    </div>
+
+    <div class="deposit-box">
+      <h2>Withdraw Funds</h2>
+      <p>Choose a withdrawal method and enter the amount.</p>
+      <form action="#">
+        <input type="number" class="input-field" placeholder="Enter amount to withdraw" required>
+        <select class="input-field">
+          <option value="bank">Bank Transfer</option>
+          <option value="crypto">Cryptocurrency</option>
+          <option value="paypal">PayPal</option>
+        </select>
+        <a href="#" class="cta-button">Withdraw</a>
+      </form>
+    </div>
   </section>
+
+  <div class="balance-summary">
+    <h2>Your Investment Balance</h2>
+    <p>Total Balance: $1,200.00</p>
+    <p>Available to Withdraw: $1,000.00</p>
+    <p>Expected Weekly Return: $480.00 (40%)</p>
+  </div>
 
   <footer>
     <p>&copy; 2025 Meti Alpha</p>
