--- a/about.html
+++ b/about.html
@@ -112,20 +112,24 @@
 
   <section class="about-container">
     <div class="about-box">
-      <h2>Welcome to Meti Alpha</h2>
-      <p>We are a cutting-edge investment platform focused on empowering retail traders and investors in the Forex and commodities markets.</p>
-      <p>Led by <span class="highlight-text">Anthony Mwangi</span>, a certified trader, Meti Alpha specializes in strategic, data-driven trading methodologies, providing actionable insights, and market analysis.</p>
-    </div>
+      <h2>About Meti Alpha</h2>
+      <p><span class="highlight-text">Meti Alpha</span> is a dynamic investment platform dedicated to helping retail investors and traders unlock the potential of the global financial markets. We focus on Forex and commodities, leveraging cutting-edge analysis and time-tested trading strategies to ensure consistent, reliable growth.</p>
+      
+      <h2>What We Do</h2>
+      <p>At Meti Alpha, we provide retail investors with the tools, insights, and expertise needed to thrive in the fast-paced world of trading. Our team is led by certified trader <span class="highlight-text">Anthony Mwangi</span>, who has years of experience and a proven track record in Forex and commodities trading.</p>
 
-    <div class="about-box">
-      <h2>Investment Packages</h2>
-      <p>At Meti Alpha, we offer three investment packages designed to meet different financial goals. Whether you're new to trading or an experienced investor, we have the perfect package for you:</p>
+      <h2>Why Choose Us?</h2>
       <ul>
-        <li><strong>Silver Package</strong> – $100 (40% return per week) – <em>Expected return: $40/week</em></li>
-        <li><strong>Gold Package</strong> – $500 (40% return per week) – <em>Expected return: $200/week</em></li>
-        <li><strong>Platinum Package</strong> – $1000 (40% return per week) – <em>Expected return: $400/week</em></li>
+        <li><strong>Expert Guidance:</strong> We offer expert market insights and advice based on extensive experience and in-depth research.</li>
+        <li><strong>Reliable Returns:</strong> Our investment packages provide reliable weekly returns, with the potential for high growth in short periods.</li>
+        <li><strong>Customer-Centric:</strong> Your success is our success. We are committed to helping you achieve your financial goals with customized strategies.</li>
+        <li><strong>Transparency:</strong> We believe in open communication and transparency, ensuring you are always informed about your investments.</li>
+        <li><strong>Security:</strong> Your investments are safe with us. We utilize the latest encryption and security protocols to ensure your funds are protected.</li>
       </ul>
-      <a href="investment.html" class="cta-button">Choose Your Package</a>
+
+      <h2>Join Us Today</h2>
+      <p>Take the first step towards financial growth and success. With Meti Alpha, you can invest with confidence knowing that you are backed by a professional team and powerful tools.</p>
+      <a href="investment.html" class="cta-button">Start Investing Now</a>
     </div>
   </section>
 
