--- a/about.html
+++ b/about.html
@@ -1,140 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About - Meti Alpha</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #2b2b2b;
-      color: #fff;
-    }
-
-    nav {
-      background-color: #181818;
-      padding: 15px 0;
-      text-align: center;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
-    }
-
-    nav a {
-      color: #fff;
-      font-size: 1.1em;
-      text-decoration: none;
-      margin: 0 20px;
-      padding: 10px;
-    }
-
-    nav a:hover {
-      color: #4CAF50;
-    }
-
-    .about-container {
-      display: flex;
-      justify-content: space-around;
-      padding: 50px 20px;
-      text-align: center;
-    }
-
-    .about-box {
-      background-color: #333;
-      border-radius: 8px;
-      padding: 40px;
-      width: 45%;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
-      transition: transform 0.3s ease-in-out;
-    }
-
-    .about-box:hover {
-      transform: scale(1.05);
-    }
-
-    .about-box h2 {
-      font-size: 2.5em;
-      color: #4CAF50;
-    }
-
-    .about-box p {
-      font-size: 1.2em;
-      color: #ccc;
-      margin-bottom: 20px;
-    }
-
-    .about-box ul {
-      text-align: left;
-      font-size: 1.2em;
-      color: #ccc;
-      padding-left: 20px;
-    }
-
-    .about-box ul li {
-      margin: 10px 0;
-    }
-
-    .cta-button {
-      background-color: #4CAF50;
-      color: white;
-      padding: 12px 24px;
-      border-radius: 30px;
-      font-size: 1.1em;
-      text-decoration: none;
-      transition: all 0.3s ease-in-out;
-    }
-
-    .cta-button:hover {
-      background-color: #45a049;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #181818;
-      color: white;
-    }
-
-    .highlight-text {
-      color: #ffbb33;
-      font-weight: bold;
-    }
-
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About Us | Meti Alpha</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
+  <!-- Navigation Bar -->
   <nav>
     <a href="index.html">Home</a>
-    <a href="investment.html">Investment</a>
-    <a href="deposit-withdrawal.html">Deposit & Withdrawal</a>
     <a href="about.html">About</a>
+    <a href="investment.html">Investment</a>
+    <a href="strategy.html">Strategy</a>
+    <a href="login.html">Login</a>
   </nav>
 
-  <section class="about-container">
-    <div class="about-box">
-      <h2>About Meti Alpha</h2>
-      <p><span class="highlight-text">Meti Alpha</span> is a dynamic investment platform dedicated to helping retail investors and traders unlock the potential of the global financial markets. We focus on Forex and commodities, leveraging cutting-edge analysis and time-tested trading strategies to ensure consistent, reliable growth.</p>
+  <!-- About Section -->
+  <section class="about">
+    <div class="container">
+      <h1>Welcome to Meti Alpha</h1>
+      <p>Meti Alpha is a leading financial investment platform specializing in data-driven Forex and commodities trading. Our expert team, led by Anthony Mwangi, aims to empower traders and investors by providing cutting-edge market insights, strategic trading methodologies, and actionable investment plans.</p>
       
-      <h2>What We Do</h2>
-      <p>At Meti Alpha, we provide retail investors with the tools, insights, and expertise needed to thrive in the fast-paced world of trading. Our team is led by certified trader <span class="highlight-text">Anthony Mwangi</span>, who has years of experience and a proven track record in Forex and commodities trading.</p>
-
       <h2>Why Choose Us?</h2>
-      <ul>
-        <li><strong>Expert Guidance:</strong> We offer expert market insights and advice based on extensive experience and in-depth research.</li>
-        <li><strong>Reliable Returns:</strong> Our investment packages provide reliable weekly returns, with the potential for high growth in short periods.</li>
-        <li><strong>Customer-Centric:</strong> Your success is our success. We are committed to helping you achieve your financial goals with customized strategies.</li>
-        <li><strong>Transparency:</strong> We believe in open communication and transparency, ensuring you are always informed about your investments.</li>
-        <li><strong>Security:</strong> Your investments are safe with us. We utilize the latest encryption and security protocols to ensure your funds are protected.</li>
-      </ul>
-
-      <h2>Join Us Today</h2>
-      <p>Take the first step towards financial growth and success. With Meti Alpha, you can invest with confidence knowing that you are backed by a professional team and powerful tools.</p>
-      <a href="investment.html" class="cta-button">Start Investing Now</a>
+      <p>At Meti Alpha, we don’t just follow trends — we anticipate them. Our approach combines advanced analysis with a commitment to long-term, sustainable returns. Whether you're a beginner looking to learn or an experienced trader seeking an edge, Meti Alpha is your trusted partner in navigating the financial markets.</p>
+      
+      <a href="investment.html" class="cta-button">Start Investing</a>
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Meti Alpha. All Rights Reserved.</p>
+    <p>&copy; 2025 Meti Alpha. All rights reserved.</p>
   </footer>
 
 </body>
