--- a/about.html
+++ b/about.html
@@ -26,7 +26,8 @@
       <h2>Why Choose Us?</h2>
       <p>At Meti Alpha, we don’t just follow trends — we anticipate them. Our approach combines advanced analysis with a commitment to long-term, sustainable returns. Whether you're a beginner looking to learn or an experienced trader seeking an edge, Meti Alpha is your trusted partner in navigating the financial markets.</p>
       
-      <a href="investment.html" class="cta-button">Start Investing</a>
+      <!-- Correct Button Link -->
+      <a href="strategy.html" class="cta-button">Start Investing</a>
     </div>
   </section>
 
