--- a/strategy.html
+++ b/strategy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us | Meti Alpha</title>
+  <title>Investment Strategy | Meti Alpha</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -17,15 +17,56 @@
     <a href="login.html">Login</a>
   </nav>
 
-  <!-- About Section -->
-  <section class="about">
+  <!-- Strategy Section -->
+  <section class="strategy">
     <div class="container">
-      <h1>Welcome to Meti Alpha</h1>
-      <p>Meti Alpha is a leading financial investment platform specializing in data-driven Forex and commodities trading. Our expert team, led by Anthony Mwangi, aims to empower traders and investors by providing cutting-edge market insights, strategic trading methodologies, and actionable investment plans.</p>
-      
-      <h2>Why Choose Us?</h2>
-      <p>At Meti Alpha, we don’t just follow trends — we anticipate them. Our approach combines advanced analysis with a commitment to long-term, sustainable returns. Whether you're a beginner looking to learn or an experienced trader seeking an edge, Meti Alpha is your trusted partner in navigating the financial markets.</p>
-      
+      <h1>Our Investment Strategy</h1>
+      <p>At Meti Alpha, our trading strategy is rooted in precision, discipline, and calculated risk-taking. We combine technical and fundamental analysis to find high-probability trades, providing our clients with steady returns over time. Our goal is to deliver a consistent 40% weekly return through a strategic mix of Forex and commodities trading.</p>
+
+      <h2>Our Method</h2>
+      <ul>
+        <li><strong>Technical Analysis:</strong> We use chart patterns, indicators, and price action to identify profitable opportunities.</li>
+        <li><strong>Fundamental Analysis:</strong> We factor in macroeconomic news, sentiment, and global financial events into our decision-making process.</li>
+        <li><strong>Risk Management:</strong> A strict risk-to-reward ratio ensures your capital is protected while maximizing profit potential.</li>
+      </ul>
+
+      <h2>Strengths of Our Strategy</h2>
+      <ul>
+        <li>Adaptable to market conditions: Suitable for both trending and range-bound markets.</li>
+        <li>Provides consistent returns: Aims for long-term stability and growth.</li>
+        <li>Minimized risk exposure: With advanced risk management techniques, we strive to protect your investments while maximizing returns.</li>
+      </ul>
+
+      <h2>Expected Returns</h2>
+      <p>Our strategy targets 40% weekly returns. Below is a simple calculation to illustrate potential profits:</p>
+
+      <table>
+        <thead>
+          <tr>
+            <th>Investment Amount</th>
+            <th>Weekly Return (40%)</th>
+            <th>Total after 2 Weeks</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>$100</td>
+            <td>$40</td>
+            <td>$180</td>
+          </tr>
+          <tr>
+            <td>$500</td>
+            <td>$200</td>
+            <td>$700</td>
+          </tr>
+          <tr>
+            <td>$1000</td>
+            <td>$400</td>
+            <td>$1400</td>
+          </tr>
+        </tbody>
+      </table>
+
       <a href="investment.html" class="cta-button">Start Investing</a>
     </div>
   </section>
