--- a/about.html
+++ b/about.html
@@ -8,6 +8,70 @@
 </head>
 <body>
 
+<body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f1f1f1;
+}
+
+nav {
+  background-color: #1a1a1a;
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 10px;
+}
+
+nav a:hover {
+  background-color: #333;
+  border-radius: 5px;
+}
+
+.about {
+  background: linear-gradient(135deg, #28a745, #1e7e34);
+  color: white;
+  text-align: center;
+  padding: 80px 20px;
+}
+
+.about h1 {
+  font-size: 3em;
+  margin-bottom: 20px;
+}
+
+.about p {
+  font-size: 1.2em;
+  margin-bottom: 30px;
+}
+
+.cta-button {
+  background-color: #ffcc00;
+  color: black;
+  padding: 15px 30px;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.cta-button:hover {
+  background-color: #e6b800;
+}
+
+footer {
+  text-align: center;
+  padding: 20px;
+  background-color: #1a1a1a;
+  color: white;
+}
+
   <!-- Navigation Bar -->
   <nav>
     <a href="index.html">Home</a>
