--- a/strategy.html
+++ b/strategy.html
@@ -4,7 +4,134 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Investment Strategy | Meti Alpha</title>
-  <link rel="stylesheet" href="styles.css" />
+  <style>
+    /* General Page Styles */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+
+    footer {
+      background-color: #1a1a1a;
+      text-align: center;
+      padding: 20px;
+      color: white;
+    }
+
+    /* Navigation Bar */
+    nav {
+      background-color: #1b1b1b;
+      display: flex;
+      justify-content: space-around;
+      padding: 15px 0;
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+
+    nav a {
+      color: white;
+      font-size: 1.1rem;
+      font-weight: 600;
+      text-transform: uppercase;
+      padding: 10px 15px;
+      transition: background-color 0.3s ease;
+    }
+
+    nav a:hover {
+      background-color: #00b140;  /* Binance green */
+      border-radius: 5px;
+    }
+
+    /* Strategy Section */
+    .strategy {
+      background: linear-gradient(135deg, #00b140, #009c3b);
+      padding: 80px 20px;
+      color: white;
+      text-align: center;
+    }
+
+    .strategy .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    .strategy h1 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+    }
+
+    .strategy p {
+      font-size: 1.2rem;
+      margin-bottom: 30px;
+    }
+
+    .strategy h2 {
+      font-size: 2rem;
+      margin-top: 30px;
+      margin-bottom: 20px;
+    }
+
+    .strategy ul {
+      list-style-type: none;
+      padding-left: 0;
+    }
+
+    .strategy ul li {
+      font-size: 1.1rem;
+      margin-bottom: 10px;
+    }
+
+    .cta-button {
+      background-color: #ffcc00;  /* Binance Yellow */
+      color: black;
+      padding: 15px 40px;
+      text-decoration: none;
+      font-weight: 600;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+
+    .cta-button:hover {
+      background-color: #e6b800;
+    }
+
+    /* Table Styles */
+    table {
+      width: 100%;
+      margin-top: 30px;
+      border-collapse: collapse;
+    }
+
+    table th, table td {
+      padding: 12px;
+      text-align: center;
+      border: 1px solid #ddd;
+    }
+
+    table th {
+      background-color: #333;
+      color: white;
+    }
+
+    table tr:nth-child(even) {
+      background-color: #f2f2f2;
+    }
+  </style>
 </head>
 <body>
 
