--- a/strategy.html
+++ b/strategy.html
@@ -25,7 +25,7 @@
     }
 
     footer {
-      background-color: #1a1a1a;
+      background-color: #111111;
       text-align: center;
       padding: 20px;
       color: white;
@@ -33,7 +33,7 @@
 
     /* Navigation Bar */
     nav {
-      background-color: #1b1b1b;
+      background-color: #111111;
       display: flex;
       justify-content: space-around;
       padding: 15px 0;
@@ -52,13 +52,13 @@
     }
 
     nav a:hover {
-      background-color: #00b140;  /* Binance green */
+      background-color: #f0b400;  /* Binance Yellow */
       border-radius: 5px;
     }
 
     /* Strategy Section */
     .strategy {
-      background: linear-gradient(135deg, #00b140, #009c3b);
+      background: linear-gradient(135deg, #111111, #333333);
       padding: 80px 20px;
       color: white;
       text-align: center;
@@ -97,7 +97,7 @@
     }
 
     .cta-button {
-      background-color: #ffcc00;  /* Binance Yellow */
+      background-color: #f0b400;  /* Binance Yellow */
       color: black;
       padding: 15px 40px;
       text-decoration: none;
@@ -107,7 +107,7 @@
     }
 
     .cta-button:hover {
-      background-color: #e6b800;
+      background-color: #e68900;
     }
 
     /* Table Styles */
@@ -124,12 +124,12 @@
     }
 
     table th {
-      background-color: #333;
+      background-color: #111111;
       color: white;
     }
 
     table tr:nth-child(even) {
-      background-color: #f2f2f2;
+      background-color: #f9f9f9;
     }
   </style>
 </head>
