--- a/strategy.html
+++ b/strategy.html
@@ -96,6 +96,15 @@
       margin-bottom: 10px;
     }
 
+    .column-content {
+      column-count: 2; /* Number of columns */
+      column-gap: 20px; /* Space between columns */
+    }
+
+    .column-content ul {
+      padding-left: 20px; /* Ensure list items are indented properly */
+    }
+
     .cta-button {
       background-color: #f0b400;  /* Binance Yellow */
       color: black;
@@ -148,25 +157,27 @@
   <section class="strategy">
     <div class="container">
       <h1>Our Investment Strategy</h1>
-      <p>At Meti Alpha, our trading strategy is rooted in precision, discipline, and calculated risk-taking. We combine technical and fundamental analysis to find high-probability trades, providing our clients with steady returns over time. Our goal is to deliver a consistent 40% weekly return through a strategic mix of Forex and commodities trading.</p>
-
-      <h2>Our Method</h2>
-      <ul>
-        <li><strong>Technical Analysis:</strong> We use chart patterns, indicators, and price action to identify profitable opportunities.</li>
-        <li><strong>Fundamental Analysis:</strong> We factor in macroeconomic news, sentiment, and global financial events into our decision-making process.</li>
-        <li><strong>Risk Management:</strong> A strict risk-to-reward ratio ensures your capital is protected while maximizing profit potential.</li>
-      </ul>
-
-      <h2>Strengths of Our Strategy</h2>
-      <ul>
-        <li>Adaptable to market conditions: Suitable for both trending and range-bound markets.</li>
-        <li>Provides consistent returns: Aims for long-term stability and growth.</li>
-        <li>Minimized risk exposure: With advanced risk management techniques, we strive to protect your investments while maximizing returns.</li>
-      </ul>
+      <div class="column-content">
+        <p>
+          At Meti Alpha, our trading strategy is rooted in precision, discipline, and calculated risk-taking.
+          We combine technical and fundamental analysis to find high-probability trades, providing consistent returns.
+        </p>
+        <h2>Our Method</h2>
+        <ul>
+          <li><strong>Technical Analysis:</strong> We use chart patterns, indicators, and price action to identify profitable opportunities.</li>
+          <li><strong>Fundamental Analysis:</strong> We factor in macroeconomic news, sentiment, and global financial events into our decision-making process.</li>
+          <li><strong>Risk Management:</strong> A strict risk-to-reward ratio ensures your capital is protected while maximizing profit potential.</li>
+        </ul>
+        <h2>Strengths of Our Strategy</h2>
+        <ul>
+          <li>Adaptable to market conditions: Suitable for both trending and range-bound markets.</li>
+          <li>Provides consistent returns: Aims for long-term stability and growth.</li>
+          <li>Minimized risk exposure: With advanced risk management techniques, we strive to protect your investments while maximizing returns.</li>
+        </ul>
+      </div>
 
       <h2>Expected Returns</h2>
       <p>Our strategy targets 40% weekly returns. Below is a simple calculation to illustrate potential profits:</p>
-
       <table>
         <thead>
           <tr>
